// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelsEdit /> should render properly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  padding: 0;
}

.emotion-1 {
  font-size: 21px;
  line-height: 30px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-2 {
  padding-top: 8px;
}

.emotion-3 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-4 {
  position: relative;
}

.emotion-5 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-5:focus,
.emotion-5 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-5:hover,
.emotion-5 .noop {
  border: 2px solid #ffffff;
}

.emotion-6 {
  padding-top: 8px;
}

.emotion-7 {
  padding-top: 8px;
}

.emotion-8 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-10 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-10:focus,
.emotion-10 .noop {
  border: 2px solid #3A5DFF;
  background-color: #ffffff;
  outline: #3A5DFF;
  color: #000000;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-12 button,
.emotion-12 a {
  margin-right: 16px;
}

.emotion-12 button:last-child,
.emotion-12 a:last-child {
  margin-right: 0;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited,
.emotion-13 .noop {
  background-color: #808080;
}

.emotion-13:hover,
.emotion-13 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-13[aria-disabled=true],
.emotion-13 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:visited,
.emotion-14 .noop {
  background-color: #3A5DFF;
}

.emotion-14:hover,
.emotion-14 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-14[aria-disabled=true],
.emotion-14 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
  action=""
  className="emotion-0"
  method="post"
  onSubmit={[Function]}
>
  <h3
    className="emotion-1"
  >
    Model Name & Description
  </h3>
  <div
    className="emotion-2"
  >
    <label
      className="emotion-3"
      htmlFor="name"
    >
      Model Name:
    </label>
    <div
      className="emotion-4"
    >
      <input
        autoComplete="off"
        autoFocus={true}
        className="emotion-5"
        disabled={false}
        id="name"
        name="name"
        onChange={[Function]}
        type="text"
        value="console_face_recognition"
      />
    </div>
    <div
      className="emotion-6"
    >
       
    </div>
  </div>
  <div
    className="emotion-7"
  >
    <label
      className="emotion-8"
      htmlFor="description"
    >
      Description (optional):
    </label>
    <div
      className="emotion-9"
    >
      <textarea
        className="emotion-10"
        id="description"
        name="description"
        onChange={[Function]}
        rows="5"
        value=""
      />
    </div>
    <div
      className="emotion-7"
    >
       
    </div>
  </div>
  <div
    className="emotion-12"
  >
    <a
      className="emotion-13"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Cancel
    </a>
    <button
      className="emotion-14"
      onClick={[Function]}
      type="submit"
    >
      Save Model
    </button>
  </div>
</form>
`;

exports[`<ModelsEdit /> should render properly 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  padding: 0;
}

.emotion-1 {
  font-size: 21px;
  line-height: 30px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-2 {
  padding-top: 8px;
}

.emotion-3 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-4 {
  position: relative;
}

.emotion-5 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-5:focus,
.emotion-5 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-5:hover,
.emotion-5 .noop {
  border: 2px solid #ffffff;
}

.emotion-6 {
  padding-top: 8px;
}

.emotion-7 {
  padding-top: 8px;
}

.emotion-8 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-10 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-10:focus,
.emotion-10 .noop {
  border: 2px solid #3A5DFF;
  background-color: #ffffff;
  outline: #3A5DFF;
  color: #000000;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-12 button,
.emotion-12 a {
  margin-right: 16px;
}

.emotion-12 button:last-child,
.emotion-12 a:last-child {
  margin-right: 0;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited,
.emotion-13 .noop {
  background-color: #808080;
}

.emotion-13:hover,
.emotion-13 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-13[aria-disabled=true],
.emotion-13 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:visited,
.emotion-14 .noop {
  background-color: #3A5DFF;
}

.emotion-14:hover,
.emotion-14 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-14[aria-disabled=true],
.emotion-14 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
  action=""
  className="emotion-0"
  method="post"
  onSubmit={[Function]}
>
  <h3
    className="emotion-1"
  >
    Model Name & Description
  </h3>
  <div
    className="emotion-2"
  >
    <label
      className="emotion-3"
      htmlFor="name"
    >
      Model Name:
    </label>
    <div
      className="emotion-4"
    >
      <input
        autoComplete="off"
        autoFocus={true}
        className="emotion-5"
        disabled={false}
        id="name"
        name="name"
        onChange={[Function]}
        type="text"
        value="My New Model"
      />
    </div>
    <div
      className="emotion-6"
    >
       
    </div>
  </div>
  <div
    className="emotion-7"
  >
    <label
      className="emotion-8"
      htmlFor="description"
    >
      Description (optional):
    </label>
    <div
      className="emotion-9"
    >
      <textarea
        className="emotion-10"
        id="description"
        name="description"
        onChange={[Function]}
        rows="5"
        value="Lorem Ipsum"
      />
    </div>
    <div
      className="emotion-7"
    >
       
    </div>
  </div>
  <div
    className="emotion-12"
  >
    <a
      className="emotion-13"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Cancel
    </a>
    <button
      className="emotion-14"
      onClick={[Function]}
      type="submit"
    >
      Save Model
    </button>
  </div>
</form>
`;
